# cs-public

./: .bazelignore  .bazelrc  .clang-format  .clangd  .dockerignore  .env  .gitattributes  .gitconfig  .gitignore  .prettierignore  AGENTS.md  BUILD  Dockerfile  MODULE.bazel  Makefile  README.md  acl.json  codecov.yml  docker-compose.yml  help.txt  migration_info.md  ngrok.yml  package-lock.json  resolved_deps.py  system.gpt.yml
.agents/docs/: DEPLOY.gpt.md  DEV_WITH_BOTS.gpt.md
.agents/plans/: db-service.gpt.plan.md
.agents/protocols/: attachOSS.protocol.gpt.md  buildInferenceContext.protocol.gpt.md  commit.protocol.gpt.md  dumpChatContext.protocol.gpt.md  findSnippets.protocol.gpt.md  lint.protocol.gpt.md  loadInferenceContext.protocol.gpt.md  loopUntilExitZero.protocol.gpt.md  newFile.protocol.gpt.md  newLab.protocol.gpt.md  planCommits.protocol.gpt.md  purge.protocol.gpt.md  runContinuousIntegration.protocol.gpt.md  saveThisThread.protocol.gpt.md  syncBazelDeps.protocol.gpt.md  useUsings.protocol.gpt.md  versionUp.protocol.gpt.md  wrapRawStrings.protocol.gpt.md
.devcontainer/: .bash_aliases  devcontainer.json
.github/: AGENTS.md
.github/workflows/: agents.yml  bazel.yml  devcontainer.yml  docker.yml
cs/: BUILD  acl.json  log.hh  result.hh
cs/ai/: BUILD  mnist.cc  neural_net.cc  neural_net.hh  neural_net_test.gpt.cc
cs/ai/gpt/: BUILD  README.md  download_wikipedia.cc  gpt_core.hh  main.cc  wikipedia.cc  wikipedia.hh
cs/ai/protos/: BUILD  mnist_data.proto.hh  neural_model.proto.hh
cs/apps/: BUILD
cs/apps/blob-service/: BUILD  blob_store.gpt.cc  blob_store.gpt.hh  blob_store_test.gpt.cc  main.gpt.cc  probes.json  rpc.gpt.cc  rpc.gpt.hh  rpc_test.gpt.cc
cs/apps/blob-viewer/: BUILD  main.gpt.cc  ui.gpt.cc  ui.gpt.hh
cs/apps/cite.pub/: BUILD  README.md  main.cc
cs/apps/code-viewer/: BUILD  main.cc  ui.gpt.cc  ui.gpt.hh
cs/apps/common/: BUILD  domain_resolver.gpt.cc  domain_resolver.gpt.hh  domain_resolver_test.gpt.cc  health_endpoint.hh  load_endpoint.gpt.hh  website.gpt.cc  website.gpt.hh  website_nav.gpt.cc  website_nav.gpt.hh
cs/apps/data-viewer/: BUILD  main.cc  ui.gpt.cc  ui.gpt.hh
cs/apps/database-service/: BUILD  main.cc  rpc.gpt.cc  rpc.gpt.hh
cs/apps/load-balancer/: BUILD  main.cc  main_test.gpt.cc
cs/apps/message-queue/: BUILD  main.gpt.cc  probes.json  rpc.gpt.cc  rpc.gpt.hh  rpc_test.gpt.cc
cs/apps/mobile/: App.tsx  BUILD  README.gpt.md  app.json  package.json
cs/apps/prober/: BUILD  main.gpt.cc  prober.gpt.cc  prober.gpt.hh  prober_test.gpt.cc
cs/apps/scribe-service/: BUILD  blob_client.gpt.cc  blob_client.gpt.hh  job_handler.gpt.cc  job_handler.gpt.hh  job_hub.gpt.cc  job_hub.gpt.hh  main.gpt.cc  probes.json  scribe_context.gpt.hh  ui.gpt.cc  ui.gpt.hh
cs/apps/scribe-worker/: BUILD  main.gpt.cc  probes.json  whisper_task.gpt.cc  whisper_task.gpt.hh
cs/apps/service-registry/: BUILD  install_docker.sh  main.gpt.cc  main_test.gpt.cc  rpc.gpt.cc  rpc.gpt.hh  rpc_test.gpt.cc  service_registry_app.gpt.cc  service_registry_app.gpt.hh
cs/apps/task-queue-service/: BUILD  probes.json  rpc.gpt.cc  rpc.gpt.hh  service_main.gpt.cc  task_client.gpt.cc  task_client.gpt.hh  task_client_test.gpt.cc  task_contract_test.gpt.cc  task_proto_parse_test.gpt.cc  task_registry_test.gpt.cc  task_worker.gpt.cc  task_worker.gpt.hh  worker_main.gpt.cc
cs/apps/trycopilot.ai/: BUILD  fps_counter.hh  fps_counter_test.gpt.cc  index.cc  main.cc  probes.disabled.json  probes.json  scene1.hh  scene_animator.hh  scene_animator_test.gpt.cc
cs/devtools/: BUILD  add_acls.py  check_visibility.py  codegen_goldens.gpt.py  compute_service_hash.gpt.py  debug_auth.sh  docker.sh  embed_files.bzl  embed_files.py  enforce_header_guards.py  expand_system.gpt.py  filenames_in_comments.py  format_black.py  generate_routing.gpt.py  gha.py  inline_using.py  lint_makefile.py  load_generator.py  move_cc.py  newfile.py  parse_logs.py  publish_code.py  regenerate_docker_configs.sh  requirements.txt  singlefile.cc  sync_build_deps.py  test_embed_files.gpt.py  test_endpoints.gpt.py  test_expand_system.gpt.py  test_expand_system_unit.gpt.py  test_inline_using.gpt.py  test_lint_makefile.gpt.py  test_newfile.gpt.py  test_parse_logs.gpt.py  test_publish_code_unit.gpt.py  update_env.py  use_usings.py  www.py
cs/devtools/examples/: BUILD  example.cc  example.hh  example_test.cc
cs/fs/: BUILD  fs.cc  fs.hh  fs_test.cc
cs/games/: BUILD  cards.hh
cs/labs/: BUILD
cs/labs/bash/: BUILD  hello_world.gpt.sh  hello_world_test.gpt.sh
cs/labs/c/: BUILD  hello_world.c  hello_world.h  hello_world_test.gpt.cc  main.c
cs/labs/cpp/: BUILD  hello.cc  hello.h  hello_world_test.gpt.cc  main.cc
cs/labs/csharp/: .editorconfig  BUILD  Program.cs  hello_world_test.gpt.cs
cs/labs/go/: BUILD  hello.go  hello_test.gpt.go  main.go
cs/labs/java/: BUILD  HelloWorld.java  HelloWorldTest.java
cs/labs/javascript/: BUILD  hello_world.gpt.js  hello_world_test.gpt.py
cs/labs/julia/: BUILD  hello_world_test.gpt.py
cs/labs/python/: BUILD  hello_world.gpt.py  hello_world_test.gpt.py
cs/labs/rust/: BUILD  hello_world_test.gpt.rs  lib.rs  main.rs
cs/labs/typescript/: BUILD  hello_world.gpt.ts  hello_world_test.gpt.py  node_globals.d.ts  tsconfig.json
cs/net/: BUILD
cs/net/html/: BUILD  dom.hh  dom_test.gpt.cc  escape.gpt.cc  escape.gpt.hh  escape_test.gpt.cc  minify.gpt.cc  (+2 more)
cs/parsers/: BUILD  arg_parser.gpt.hh  arg_parser_test.gpt.cc  parsers.cc  parsers.hh  parsers_test.gpt.cc
cs/renderer/: BUILD  film.hh  pixel.hh  pixel_test.gpt.cc  rainbow.cc  rainbow.h  rainbow_test.cc  scene.cc  scene.hh  scene_renderer.cc  scene_renderer.hh  scene_renderer_test.cc  sphere_renderer.cc  sphere_renderer.hh  sphere_renderer_test.cc
(+382 files in other folders)
